--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   },
   "devDependencies": {
     "react-redux": ">=7.2.4",
-    "redux": ">=4.1.1"
+    "redux": ">=4.1.1",
+    "redux-persist": "^6.0.0"
   },
   "packageManager": "yarn@3.0.0"
 }
