--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
   "devDependencies": {
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0"
-  }
+  },
+  "packageManager": "yarn@3.0.0"
 }
