--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
+    "react-redux": "^7.2.4",
     "redux": "^4.1.1"
   },
   "packageManager": "yarn@3.0.0"
