--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "react-redux": "^7.2.4",
-    "redux": "^4.1.1"
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0"
   },
   "packageManager": "yarn@3.0.0"
 }
