--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": ">=11.1.0",
+    "react": ">=17.0.2",
+    "react-dom": ">=17.0.2"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0",
-    "react-redux": "^7.2.4",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0"
+    "eslint": ">=7.32.0",
+    "eslint-config-next": ">=11.1.0",
+    "react-redux": ">=7.2.4",
+    "redux": ">=4.1.1",
+    "redux-thunk": ">=2.3.0"
   },
   "packageManager": "yarn@3.0.0"
 }
