--- a/package.json
+++ b/package.json
@@ -1,13 +1,6 @@
 {
   "name": "reactjs-nextjs-cho-nyumon",
   "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
     "next": "12.1.0",
     "react": "17.0.2",
@@ -20,5 +13,12 @@
     "redux": "4.1.2",
     "redux-thunk": "2.4.1"
   },
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@3.2.0",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start"
+  }
 }
